Don't mark video elements with inactive MediaStream as active

Active MediaStreams assigned to a video element would always keep them
busy and prevent garbage collection. An inactive MediaStream with stopped
tracks shouldn't cause any activity and allow the parent video element
to be garbage collected, allowing the stream to be garbage collected too.

Only works with streams assigned through srcObject and not stream URLs
from URL.createObjectURL().

Bug: 771550
Change-Id: Ie8340c0a90835d0085e9da8098c16df5b3d8c64c