third_party/WebKit/Source/core/html/media/HTMLMediaElement.cpp
@@ -3510,9 +3510,13 @@ bool HTMLMediaElement::HasPendingActivity() const {
   if (should_delay_load_event_)
     return true;
 
+  const bool isInactiveMediaStream =
+      GetLoadType() == WebMediaPlayer::kLoadTypeMediaStream && GetSrcObject() &&
+      !GetSrcObject()->Active();
+
   // When networkState is kNetworkLoading, progress and stalled events may be
   // fired.
-  if (network_state_ == kNetworkLoading)
+  if (network_state_ == kNetworkLoading && !isInactiveMediaStream)
     return true;
 
   {
@@ -3522,7 +3526,7 @@ bool HTMLMediaElement::HasPendingActivity() const {
     AutoReset<bool> scope(&official_playback_position_needs_update_, false);
 
     // When playing or if playback may continue, timeupdate events may be fired.
-    if (CouldPlayIfEnoughData())
+    if (CouldPlayIfEnoughData() && !isInactiveMediaStream)
       return true;
   }
 
